# WarmStudy

./: .gitignore  ARCHITECTURE_DESIGN.md  ARCHITECTURE_REDESIGN_v5.md  PROJECT_EVALUATION.md  PROJECT_REPORT.md  README.md  create_competition_summary_ppt.js  docker-compose.yml  test_core_functionality.py
agent/: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_PROTOTYPE_REPORT.md  CODE_REVIEW_CHECKLIST.md  CODING_STANDARDS.md  DEPLOYMENT.md  Dockerfile  GAP_ANALYSIS.md  OPS_MANUAL.md  OPTIMIZATION_REPORT.md  QUALITY_METRICS.md  README.md  STARTUP_GUIDE.md  api_gateway.py  app.py  app.py.bak_refactor  deploy.bat  docker-compose.yml  embeddings.py  loader.py  ocr.py  pyproject.toml  redis_client.py  requirements.txt  setup.bat  setup.cfg  start_all.bat  start_all.ps1  start_docker.bat  start_venv.bat  vectorstore.py
agent/.github/workflows/: ci-cd.yml
agent/agent/: __init__.py  context_core.py  distributed.py  memory.py  prompts.py  skills.py  strategy_engine.py  streaming.py  tool_registry.py  vectorstore.py
agent/agent/api/: __init__.py  auth.py  docs.py  errors.py  routes.py  routes.py.bak_perf  routes.py.bak_refactor  routes_v5.py  schemas.py
agent/agent/context/: __init__.py  context_lifecycle.py  context_manager.py  context_pipeline.py
agent/agent/core/: __init__.py  agent.py  agent.py.bak_opt  agent.py.bak_perf  agent.py.bak_refactor  executor.py  intent_router.py  orchestrator.py  router.py  workflow_engine.py
agent/agent/memory_store/: __init__.py  unified_memory.py
agent/agent/modules/: __init__.py  psychology_module.py
agent/agent/modules/psychology/: __init__.py  crisis.py  emotion.py  empathic.py  knowledge.py
agent/agent/rag/: __init__.py  cache_manager.py  rag_engine.py
agent/agent/tools/: __init__.py  education.py  psychology.py  tool_selector.py
agent/agent/utils/: __init__.py  logger.py  monitor.py
agent/config/: gateway.json  prometheus.yml
agent/data/: pdf_ocr_text.txt
agent/data/agent/memory/: 05204ffe1e69.json  (+4 more)
agent/performance/: __init__.py  benchmark.py  monitor.py  profiler.py
agent/templates/: download.html  gateway_dashboard.html  index.html  landing.html  psychology_test.html
agent/tests/: conftest.py  test_auth.py  test_context.py  test_core.py  test_import_psych_dataset.py  test_memory.py  test_memory_store.py  test_psychology.py  test_skills.py  test_strategy_refinement.py  test_tools.py  test_utils.py  test_vectorstore.py
agent/tools/: import_psych_dataset.py
agent/uploads/: 2bcb2250_AI Thinking Protocol.md
docs/: 部署说明.md  (+23 more)
(+156 files in other folders)
